Add missing properties to ConfigurationPlan (#48)
* Add missing properties to ConfigurationPlan


* Fix cache policy mapping and OpenAPI typo


---------
