# api/src/main/java/io/reshapr/kubernetes/api/configurationplan/v1alpha1/CachePolicy.java
@@ -1,0 +1,52 @@
+/*
+ * Copyright The Reshapr Authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.reshapr.kubernetes.api.configurationplan.v1alpha1;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonPropertyDescription;
+import io.sundr.builder.annotations.Buildable;
+
+/**
+ * @author vaishnav
+ */
+@JsonIgnoreProperties(ignoreUnknown = true)
+@JsonInclude(JsonInclude.Include.NON_NULL)
+@Buildable(editableEnabled = false, builderPackage = "io.fabric8.kubernetes.api.builder")
+public class CachePolicy {
+
+    @JsonPropertyDescription("Time-to-live in milliseconds for client-side MCP caching")
+    private Long ttlMs;
+
+    @JsonPropertyDescription("Optional scope of caching")
+    private String cacheScope;
+
+    public Long getTtlMs() {
+        return ttlMs;
+    }
+
+    public void setTtlMs(Long ttlMs) {
+        this.ttlMs = ttlMs;
+    }
+
+    public String getCacheScope() {
+        return cacheScope;
+    }
+
+    public void setCacheScope(String cacheScope) {
+        this.cacheScope = cacheScope;
+    }
+}
